tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/future-symbol-attributes.wyst
module syntax_future_attrs

#weak
fn weak_default() { }
